# l2neighborpoller

./: .gitignore  README.md  config_sample.toml  l2np.sh  pyproject.toml  requirements.txt
l2np/: db.py  l2_snmp.py
src/: config.py  db.py  device.py  l2_snmp.py  l2np.py
